const MainTabsNavsConst = {};

MainTabsNavsConst.BROWSE = 'BROWSE';
MainTabsNavsConst.HOME = 'HOME';
MainTabsNavsConst.PROFILE = 'PROFILE';
MainTabsNavsConst.DEEL_DAILY = 'DEEL_DAILY';
MainTabsNavsConst.SHOPS = 'SHOPS';

Object.freeze(MainTabsNavsConst);
export default MainTabsNavsConst;
