...
            </View>
        )
    }, [categories, insets.top]);

    return (
        <View style={style.container}
              testID="main-page">
            <FloatingAddProductButton trackingPageName={COMPONENTS_PAGE.BROWSE}/>
            <Activities componentFilter={WidgetDataFilterCont.BROWSE_PAGE_ACTIVITY}
                        ListHeaderComponent={renderActivitiesHeader}/>
            <SubCategoriesModal.Modal
                onSelect={onSelectSubCategory}
                onHide={() => {SubCategoriesModal.show(false)}}/>
...
