...
  "الكمية": "Quantity",
  "السعر بعد الخصم": "Price after discount",
  "على إسم المنتج أن يكون  ١٠ أحرف على الأقل": "The product name must be at least 10 characters",
  "على إسم المنتج أن يكون ٥٠ حرف على الأكثر": "The product name must be at most 50 characters",
  "على الوصف أن يكون  ٢٥ حرف على الأقل": "Description must be at least 25 characters",
  "على إسم المنتج أن يكون ٦٠٠ حرف على الأكثر": "The product name must be at most 600 characters",
  "تخطي": "Skip",
  "أسود": "Black",
  "سكني غامق": "Dove Gray",
  "سكني": "Silver Chalice",
  "فضي": "Silver",
  "سكني فاتح": "Gallery",
  "أبيض": "White",
...
